# smartcity-computer-vision

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.py  dataset_utils.py  demo.py  docker-compose.yml  evaluate.py  garbage_train.py  helmet_train.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  traffic_train.py
.github/workflows/: ci.yml
dataset/Garbage Detection/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/Helmet Detection/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/Traffic Violations/: README.dataset.txt  README.roboflow.txt  data.yaml
garbage-detection/: garbage_config.yaml
helmet-detection/: helmet_config.yaml
notebooks/: data_analysis.ipynb
tests/: __init__.py
traffic-detection/: traffic_config.yaml
utils/: __init__.py  common.py  logging_utils.py  performance_utils.py
